--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 <div class="testimonial-item text-center">
                                     <img src="/gettyimages-1438969575-612x612.jpg" alt="Student" class="rounded-circle mb-3" width="20%">
                                     <p class="testimonial-text">"YTROZ Royal College provided me with the perfect environment to grow both academically and personally. The faculty's dedication is unmatched."</p>
-                                    <h5>Sarah Johnson</h5>
+                                    <h5>Sarah Jaeson</h5>
                                     <p class="text-muted">Class of 2020, Medical Student</p>
                                 </div>
                             </div>
