--- a/Art.html
+++ b/Art.html
@@ -190,7 +190,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Ytroz College</a>
+            <img src="/images.png" alt="" width="10%">
+            <a class="navbar-brand" href="#"><span>Ytroz </span>College</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
