--- a/index.html
+++ b/index.html
@@ -114,6 +114,33 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <i class="fas fa-paint-brush fa-3x text-primary mb-3"></i>
+                            <h3 class="card-title">Childhood Education</h3>
+                            <p class="card-text">Creative arts programs in visual arts, music, and theater that nurture talent and artistic expressionThe program emphasizes child development, curriculum planning, assessment strategies, and family engagement. Graduates are prepared for careers in preschools, childcare centers, elementary schools, and other early childhood settings.</p>
+                            <a href="/CED.html" class="btn btn-sm btn-primary">View Programs</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <i class="fas fa-paint-brush fa-3x text-primary mb-3"></i>
+                            <h3 class="card-title">Robotic Engineering</h3>
+                            <p class="card-text">Our newly renovated robotics laboratory features the latest equipment for hands-on learning, including industrial robotic arms, 3D printers, laser cutters, and a dedicated AI computing cluster</p>
+                            <a href="/rob.html" class="btn btn-sm btn-primary">View Programs</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <i class="fas fa-paint-brush fa-3x text-primary mb-3"></i>
+                            <h3 class="card-title">Languages and Tradition</h3>
+                            <p class="card-text">Our newly renovated robotics laboratory features the latest equipment for hands-on learning, including industrial robotic arms, 3D printers, laser cutters, and a dedicated AI computing cluster</p>
+                            <a href="/language.html" class="btn btn-sm btn-primary">View Programs</a>
             </div>
         </div>
     </section>
